Mon Sep 08 17:39:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (GTKMessage): add a scrollbar for message window when
	  it has to hold lots

Mon Sep  8 19:20:13 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseOldMove): handle oldmoves files generated by
	fibs2html. Add warning for truly invalid moves.

Mon Sep  8 11:26:52 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c (GTKRecordShow): Use gettext to aszRating[] and
	aszLuckRating[].

Mon Sep  8 03:07:11 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkrace.c (OSRPage): Don't use gettext on empty strings.

Sun Sep  7 15:23:01 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (NewSet): ensure that tutor mode flag follows
	global setting.
	* gtkexport.c: legend is not implemented yet.

Sun Sep  7 15:11:08 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal), play.c (ComputerTurn): yet another
	attempt to fix external play.

Sun Sep  7 10:35:46 2003  Joern Thyssen  <jth@gnubg.org>

	Revert "Sat Sep  6 11:35:32 2003".

	* drawboard.c, boardpos.c, boardpos.h, gtkboard.c, export.c:
	revert checkin.

Sat Sep  6 18:06:51 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (HintChequer): Message synch with play.c.
	Replace "Considering moves" with "Considering move".

Sat Sep 6 16:14:58 GMT 2003   Jim Segrave <jes@jes-2.demon.nl>

	* play.c - try to improve distinguishing cube & chequer play
	  error flags

Sat Sep  6 15:07:31 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkrace.c, show.c:	Small improvements in output of race stuff and
	fixes to some bugs in gtkrace.
	(reported by Chris D. Yep)

Sat Sep  6 14:24:54 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintCubeAnalysisTable): fix typo.
	(reported by Martin Krainer)

Sat Sep  6 11:35:32 2003  Joern Thyssen  <jth@gnubg.org>

	Align the FIBSBoard routines to the FIBS board spec.
	This should fix Kees' external player problems.

	* drawboard.c (FIBSBoard): write correct value for "doubled".