@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: formatgs.c,v 1.2 2003/08/30 18:20:07 thyssen Exp $
+ * $Id: formatgs.c,v 1.3 2003/09/08 18:44:39 hb Exp $
  */
 
 #include "config.h"
@@ -223,28 +223,36 @@ formatGS( const statcontext *psc, const matchstate *pms,
 
       static char *asz2[] = {
         N_("Missed doubles around DP"),
+        N_("Missed doubles around CP"),
         N_("Missed doubles around TG"),
         N_("Wrong doubles around DP"),
+        N_("Wrong doubles around CP"),
         N_("Wrong doubles around TG"),
         N_("Wrong takes"),
         N_("Wrong passes") };
 
-      const int *ai2[ 6 ] = { psc->anCubeMissedDoubleDP,
+      const int *ai2[ 8 ] = { psc->anCubeMissedDoubleDP,
+                              psc->anCubeMissedDoubleCP,
                               psc->anCubeMissedDoubleTG,
                               psc->anCubeWrongDoubleDP,
+                              psc->anCubeWrongDoubleCP,
                               psc->anCubeWrongDoubleTG,
                               psc->anCubeWrongTake,
                               psc->anCubeWrongPass };
-      const float *af2[ 2 ][ 6 ] = { 
+      const float *af2[ 2 ][ 8 ] = {
         { psc->arErrorMissedDoubleDP[ 0 ],
+          psc->arErrorMissedDoubleCP[ 0 ],
           psc->arErrorMissedDoubleTG[ 0 ],
           psc->arErrorWrongDoubleDP[ 0 ],
+          psc->arErrorWrongDoubleCP[ 0 ],
           psc->arErrorWrongDoubleTG[ 0 ],
           psc->arErrorWrongTake[ 0 ],
           psc->arErrorWrongPass[ 0 ] },
         { psc->arErrorMissedDoubleDP[ 1 ],
+          psc->arErrorMissedDoubleCP[ 1 ],
           psc->arErrorMissedDoubleTG[ 1 ],
           psc->arErrorWrongDoubleDP[ 1 ],
+          psc->arErrorWrongDoubleCP[ 1 ],
           psc->arErrorWrongDoubleTG[ 1 ],
           psc->arErrorWrongTake[ 1 ],
           psc->arErrorWrongPass[ 1 ] } };
@@ -256,7 +264,7 @@ formatGS( const statcontext *psc, const matchstate *pms,
                               numberEntry( gettext( asz[ i ] ),
                                            ai[ i ][ 0 ],
                                            ai[ i ][ 1 ] ) );
-      for ( i = 0; i < 6; ++i ) {
+      for ( i = 0; i < 8; ++i ) {
         aasz = g_malloc( 3 * sizeof ( *aasz ) );
 
         aasz[ 0 ] = g_strdup( gettext( asz2[ i ] ) );
