@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubgmodule.c,v 1.18 2003/09/02 21:07:11 joseph Exp $
+ * $Id: gnubgmodule.c,v 1.19 2003/09/08 18:44:39 hb Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -1235,35 +1235,47 @@ PyGameStats(const statcontext* sc)
     int side;
     for(side = 0; side < 2; ++side) {
       PyObject* d =
-	Py_BuildValue("{s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i"
-		      "s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f}",
+	Py_BuildValue("{s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i,s:i"
+		      "s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f,s:f}",
 		      "total-cube",sc->anTotalCube[side],
 		      "n-doubles",sc->anDouble[side],
 		      "n-takes", sc->anTake[side],
 		      "n-drops", sc->anPass[side],
-			
+
 		      "missed-double-dp",sc->anCubeMissedDoubleDP[side],
+		      "missed-double-cp",sc->anCubeMissedDoubleCP[side],
 		      "missed-double-tg", sc->anCubeMissedDoubleTG[side],
 		      "wrong-double-dp", sc->anCubeWrongDoubleDP[side],
+		      "wrong-double-cp", sc->anCubeWrongDoubleCP[side],
 		      "wrong-double-tg",sc->anCubeWrongDoubleTG[side],
 		      "wrong-take", sc->anCubeWrongTake[side],
 		      "wrong-drop", sc->anCubeWrongPass[side],
-			
+
 		      "err-missed-double-dp-skill",
 		      sc->arErrorMissedDoubleDP[side][0],
 		      "err-missed-double-dp-cost",
 		      sc->arErrorMissedDoubleDP[side][1],
-			
+
+		      "err-missed-double-cp-skill",
+		      sc->arErrorMissedDoubleCP[side][0],
+		      "err-missed-double-cp-cost",
+		      sc->arErrorMissedDoubleCP[side][1],
+
 		      "err-missed-double-tg-skill",
 		      sc->arErrorMissedDoubleTG[side][ 0 ],
 		      "err-missed-double-tg-cost",
 		      sc->arErrorMissedDoubleTG[side][ 1 ],
-			
+
 		      "err-wrong-double-dp-skill",
 		      sc->arErrorWrongDoubleDP[side][ 0 ],
 		      "err-wrong-double-dp-cost",
 		      sc->arErrorWrongDoubleDP[side][ 1 ],
-			
+
+		      "err-wrong-double-cp-skill",
+		      sc->arErrorWrongDoubleCP[side][ 0 ],
+		      "err-wrong-double-cp-cost",
+		      sc->arErrorWrongDoubleCP[side][ 1 ],
+
 		      "err-wrong-double-tg-skill",
 		      sc->arErrorWrongDoubleTG[side][ 0 ],
 		      "err-wrong-double-tg-cost",
