@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: sgf.c,v 1.81 2003/09/03 18:08:41 thyssen Exp $
+ * $Id: sgf.c,v 1.82 2003/09/08 18:44:39 hb Exp $
  */
 
 #include "config.h"
@@ -239,10 +239,14 @@ static void RestoreGS( list *pl, statcontext *psc ) {
 
 	    psc->anCubeMissedDoubleDP[ 0 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeMissedDoubleDP[ 1 ] = strtol( pch, &pch, 10 );
+	    psc->anCubeMissedDoubleCP[ 0 ] = strtol( pch, &pch, 10 );
+	    psc->anCubeMissedDoubleCP[ 1 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeMissedDoubleTG[ 0 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeMissedDoubleTG[ 1 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeWrongDoubleDP[ 0 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeWrongDoubleDP[ 1 ] = strtol( pch, &pch, 10 );
+	    psc->anCubeWrongDoubleCP[ 0 ] = strtol( pch, &pch, 10 );
+	    psc->anCubeWrongDoubleCP[ 1 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeWrongDoubleTG[ 0 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeWrongDoubleTG[ 1 ] = strtol( pch, &pch, 10 );
 	    psc->anCubeWrongTake[ 0 ] = strtol( pch, &pch, 10 );
@@ -252,10 +256,14 @@ static void RestoreGS( list *pl, statcontext *psc ) {
 	    
 	    psc->arErrorMissedDoubleDP[ 0 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleDP[ 0 ][ 1 ] = strtod( pch, &pch );
+	    psc->arErrorMissedDoubleCP[ 0 ][ 0 ] = strtod( pch, &pch );
+	    psc->arErrorMissedDoubleCP[ 0 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleTG[ 0 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleTG[ 0 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleDP[ 0 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleDP[ 0 ][ 1 ] = strtod( pch, &pch );
+	    psc->arErrorWrongDoubleCP[ 0 ][ 0 ] = strtod( pch, &pch );
+	    psc->arErrorWrongDoubleCP[ 0 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleTG[ 0 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleTG[ 0 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongTake[ 0 ][ 0 ] = strtod( pch, &pch );
@@ -264,10 +272,14 @@ static void RestoreGS( list *pl, statcontext *psc ) {
 	    psc->arErrorWrongPass[ 0 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleDP[ 1 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleDP[ 1 ][ 1 ] = strtod( pch, &pch );
+	    psc->arErrorMissedDoubleCP[ 1 ][ 0 ] = strtod( pch, &pch );
+	    psc->arErrorMissedDoubleCP[ 1 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleTG[ 1 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorMissedDoubleTG[ 1 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleDP[ 1 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleDP[ 1 ][ 1 ] = strtod( pch, &pch );
+	    psc->arErrorWrongDoubleCP[ 1 ][ 0 ] = strtod( pch, &pch );
+	    psc->arErrorWrongDoubleCP[ 1 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleTG[ 1 ][ 0 ] = strtod( pch, &pch );
 	    psc->arErrorWrongDoubleTG[ 1 ][ 1 ] = strtod( pch, &pch );
 	    psc->arErrorWrongTake[ 1 ][ 0 ] = strtod( pch, &pch );
@@ -1941,23 +1953,30 @@ static void WriteStatContext( FILE *pf, statcontext *psc ) {
 		 psc->anTotalCube[ 1 ], psc->anDouble[ 0 ], psc->anDouble[ 1 ],
 		 psc->anTake[ 0 ], psc->anTake[ 1 ], psc->anPass[ 0 ],
 		 psc->anPass[ 1 ] );
-	fprintf( pf, "%d %d %d %d %d %d %d %d %d %d %d %d ",
+	fprintf( pf, "%d %d %d %d %d %d %d %d %d %d %d %d %d %d %d %d ",
 		 psc->anCubeMissedDoubleDP[ 0 ],
 		 psc->anCubeMissedDoubleDP[ 1 ],
+		 psc->anCubeMissedDoubleCP[ 0 ],
+		 psc->anCubeMissedDoubleCP[ 1 ],
 		 psc->anCubeMissedDoubleTG[ 0 ],
 		 psc->anCubeMissedDoubleTG[ 1 ],
 		 psc->anCubeWrongDoubleDP[ 0 ], psc->anCubeWrongDoubleDP[ 1 ],
+		 psc->anCubeWrongDoubleCP[ 0 ], psc->anCubeWrongDoubleCP[ 1 ],
 		 psc->anCubeWrongDoubleTG[ 0 ], psc->anCubeWrongDoubleTG[ 1 ],
 		 psc->anCubeWrongTake[ 0 ], psc->anCubeWrongTake[ 1 ],
 		 psc->anCubeWrongPass[ 0 ], psc->anCubeWrongPass[ 1 ] );
 	fprintf( pf, "%.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f "
-		 "%.6f ",
+		 "%.6f %.6f %.6f %.6f %.6f ",
 		 psc->arErrorMissedDoubleDP[ 0 ][ 0 ],
 		 psc->arErrorMissedDoubleDP[ 0 ][ 1 ],
+		 psc->arErrorMissedDoubleCP[ 0 ][ 0 ],
+		 psc->arErrorMissedDoubleCP[ 0 ][ 1 ],
 		 psc->arErrorMissedDoubleTG[ 0 ][ 0 ],
 		 psc->arErrorMissedDoubleTG[ 0 ][ 1 ],
 		 psc->arErrorWrongDoubleDP[ 0 ][ 0 ],
 		 psc->arErrorWrongDoubleDP[ 0 ][ 1 ],
+		 psc->arErrorWrongDoubleCP[ 0 ][ 0 ],
+		 psc->arErrorWrongDoubleCP[ 0 ][ 1 ],
 		 psc->arErrorWrongDoubleTG[ 0 ][ 0 ],
 		 psc->arErrorWrongDoubleTG[ 0 ][ 1 ],
 		 psc->arErrorWrongTake[ 0 ][ 0 ],
@@ -1965,13 +1984,17 @@ static void WriteStatContext( FILE *pf, statcontext *psc ) {
 		 psc->arErrorWrongPass[ 0 ][ 0 ],
 		 psc->arErrorWrongPass[ 0 ][ 1 ] );
 	fprintf( pf, "%.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f %.6f "
-		 "%.6f]",
+		 "%.6f %.6f %.6f %.6f %.6f]",
 		 psc->arErrorMissedDoubleDP[ 1 ][ 0 ],
 		 psc->arErrorMissedDoubleDP[ 1 ][ 1 ],
+		 psc->arErrorMissedDoubleCP[ 1 ][ 0 ],
+		 psc->arErrorMissedDoubleCP[ 1 ][ 1 ],
 		 psc->arErrorMissedDoubleTG[ 1 ][ 0 ],
 		 psc->arErrorMissedDoubleTG[ 1 ][ 1 ],
 		 psc->arErrorWrongDoubleDP[ 1 ][ 0 ],
 		 psc->arErrorWrongDoubleDP[ 1 ][ 1 ],
+		 psc->arErrorWrongDoubleCP[ 1 ][ 0 ],
+		 psc->arErrorWrongDoubleCP[ 1 ][ 1 ],
 		 psc->arErrorWrongDoubleTG[ 1 ][ 0 ],
 		 psc->arErrorWrongDoubleTG[ 1 ][ 1 ],
 		 psc->arErrorWrongTake[ 1 ][ 0 ],
